# sony_customerchurn

./: Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/processed/: X_test.pkl  synthetic_customer_data.csv  test_data.csv  y_test.pkl
deployment/: app.py
deployment/.streamlit/: config.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_model.pkl
notebooks/: modeling.ipynb  synthetic_data.ipynb
reports/: modeling.html  modeling_1.html  modeling_2.html
