[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sony_customerchurn"
version = "0.0.1"
description = "Customer Churn Prediction (Sony Research Interview Question)"
authors = [
  { name = "KhabeerAhmed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["sony_customerchurn"]
force_sort_within_sections = true
